# AntiPlag

./: pyproject.toml
antiplag/: checker.py  cli.py  files.py  github.py  graph.py  repositories.py
