[tool.poetry]
name = "antiplag"
version = "0.1.0"
description = ""
authors = ["Semtex <kopecky.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
esprima = "^4.0.1"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
plotly = "^5.18.0"
click = "^8.1.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
antiplag = "antiplag.cli:antiplag"